--- a/test-demo.yaml
+++ b/test-demo.yaml
@@ -1,10 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: eks-test
+  name: test-demo
   annotations:
-    github.com/project-slug: aashimodi14/eks-test
-    backstage.io/kubernetes-namespace: dice-space
     backstage.io/kubernetes-id: test-demo
 spec:
   type: service
